Refactor README and update sample data
- Updated README.md for consistency in naming conventions (USDⓈ-M to USD-M).
- Modified sample funding rates and premium index JSON files to reflect accurate funding times.
- Enhanced requirements.txt to specify minimum versions for dependencies.
- Improved binance_futures_adapter.py and futures_math.py with docstrings for better clarity on functionality.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy
-pandas
-matplotlib
-requests
-jupyter
-nbformat
+numpy>=1.24.0
+pandas>=2.0.0
+matplotlib>=3.7.0
+requests>=2.31.0
+jupyter>=1.0.0
+nbformat>=5.9.0
